--- a/custom.css
+++ b/custom.css
@@ -65,6 +65,10 @@ section[data-state="panic"] h2 {
     box-shadow: none;
 }
 
+.reveal pre.mermaid {
+    text-align: center;
+}
+
 .reveal section[data-state="screens"] div img {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
